[package]
authors = ["Thomas Brigham <thomas@thomasbrigham.me>"]
categories = ["data-structures", "parser-implementations"]
description = "A library to generate and parse Postgres money types."
edition = "2021"
keywords = ["money", "currency", "cash"]
license-file = "LICENSE"
homepage = "https://github.com/tkbrigham/postgres_money"
name = "postgres_money"
readme = "README.md"
repository = "https://github.com/tkbrigham/postgres_money"

version = "0.4.0" # ALSO UPDATE #![doc(html_root_url)]
[package.metadata.docs.rs]
features = ["serde", "sql"]

[package.metadata.playground]
features = ["serde", "sql"]

[features]
sql = ["postgres-types", "byteorder", "bytes"]

[dependencies.regex]
version = "1.10.6"

[dependencies.serde]
optional = true
features = ["serde_derive"]
version = "1.0.209"

[dependencies.postgres-types]
optional = true
features = ["derive"]
version = "0.2.7"

[dependencies.byteorder]
optional = true
version = "1.5.0"

[dependencies.bytes]
optional = true
version = "1.7.1"
